changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Document a few things.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim_proto.h
Nicolas Weeger 2008-05-10

Fix bombs being really too powerful.
 server/spell_attack.c: set the maxhp (for spell merging) for bombs too.
Nicolas Weeger 2008-05-10

Make the 'second' timemode work. Don't set FLAG_WIZ* on non player object.
Correctly remove event if unique.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim_proto.h
Nicolas Weeger 2008-05-10

Fix a few warnings.
 include/sproto.h: add prototype for query_cost_string().
 test/toolkit/toolkit_common.c: make argument const.
Nicolas Weeger 2008-05-10

Rename some functions, fix documentation.
 doc/Developers/login.dox
 include/sockproto.h
 server/init.c server.c
 socket/init.c loop.c request.c
Nicolas Weeger 2008-05-10

Implement feature request #1961031: 'drop food' and 'drop flesh' buttons would be nice.
 lib/help/dropall.{fr,en}: update help text.
 server/c_object.c: extend 'dropall' to accept 'food' and 'flesh'.
Nicolas Weeger 2008-05-10

Fix bug #1846018: artifact monster graphics broken.
 common/treasure.c: animation is part of things artifact can change.
 lib/artifacts: add correct animations to monsters.
Nicolas Weeger 2008-05-09


Also extract NPC messages for friendly living things.
 utils/mapper.c
Nicolas Weeger 2008-05-08

Potential fix for bug #1928570: x-ray vision now needs a push start.
 server/spell_effect.c: use FLAG_NO_FIX_PLAYER to not mess with our values.
Nicolas Weeger 2008-05-08

Fix a potential underflow, forbid players to create too powerful missiles.
 server/spell_effect.c
Nicolas Weeger 2008-05-08